# design_patterns

./: .clang-format  CMakeLists.txt  README.md
Factory/SimpleFactory/: CMakeLists.txt  README.me
Factory/SimpleFactory/include/SimpleFactory/: IRobot.hpp  KobukiRobot.hpp  RobotFactory.hpp  SpotRobot.hpp
Factory/SimpleFactory/src/: main.cpp
